--- a/universalvideoview/build.gradle
+++ b/universalvideoview/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
-        minSdkVersion 9
+        minSdkVersion 17
         targetSdkVersion 23
         versionCode 4
         versionName "1.1.0"
@@ -21,6 +21,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.0'
+    implementation 'com.google.android.exoplayer:exoplayer:2.6.1'
 }
 
 apply from: "bintrayUpload.gradle"
