--- a/universalvideoviewsample/build.gradle
+++ b/universalvideoviewsample/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         applicationId "com.universalvideoviewsample"
-        minSdkVersion 9
+        minSdkVersion 17
         targetSdkVersion 23
         versionCode 3
         versionName "1.0.2"
